tests/cases/smoke/valid/expressions_none_compare.dp
var maybe_value: none = none
if maybe_value == none {
    maybe_value = none
}
