tests/cases/smoke/invalid/record_invalid_member_init.dp
record Animal {
    init var name: str
}
